--- a/index.html
+++ b/index.html
@@ -27,6 +27,7 @@ table, td {
 	<td>Programming, gardening, 3D modeling</td>
   </tr>	
 </table>
+<p>Jekyll does not want to work, so here is a fish: <p/>
 <img src="./Files/Images/spinningFish.gif" alt="Cannot display image"style="width:1250px; height:400px;">
 </body>
 
