--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@ table, td {
   border-collapse: collapse;
 }
 </style>
+<img src="./Files/Images/gmuPond.jpg" alt="Cannot display image"style="width:1024px; height:500px;">
 </head>
 <body>
-<h1>Hello, website of Francis O<h1>
+<h1>Hello, website of fochoada<h1>
 <p>Made through GitHub Pages</p>
 
 
 <table style="width:50%">
   <tr>
     <td>Name</td>
-	<td>Francis O</td>
+	<td>Francis Ochoada</td>
   </tr>
   <tr>
 	<td>Introduction</td>
@@ -27,7 +28,8 @@ table, td {
 	<td>Programming, gardening, 3D modeling</td>
   </tr>	
 </table>
-<p>Jekyll does not want to work, so here is a fish: <p/>
+<p>Jekyll does not want to work on my computer, so here is a fish: <p/>
+<p>I am willing to try to install Jekyll on a different computer or VM in the future. </p>
 <img src="./Files/Images/spinningFish.gif" alt="Cannot display image"style="width:1250px; height:400px;">
 </body>
 
