--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@ table, td {
 	<td>Programming, gardening, 3D modeling</td>
   </tr>	
 </table>
-<p>Jekyll does not want to work on my computer, so here is a fish: <p/>
-<p>I am willing to try to install Jekyll on a different computer or VM in the future. </p>
+<p>Jekyll does not want to upload properly to GitHub, so here is a fish: <p/>
 <img src="./Files/Images/spinningFish.gif" alt="Cannot display image"style="width:1250px; height:400px;">
 </body>
 
